--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
-Flask-JWT-Extended==4.3.1
-pymongo==4.1.1
-python-dotenv==0.20.0
-werkzeug==2.2.3
+Flask
+Flask-JWT-Extended
+pymongo
+python-dotenv
+werkzeug
