--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 JWT_SECRET_KEY=your_secret_key_here
 
 # URI untuk koneksi MongoDB
-MONGO_URI=mongodb://localhost:27017/<database>
+MONGO_URI=mongodb://localhost:27017
+MONGO_DB_NAME=<database>
